tests/snapshots/integration__integration_tests__push__push_dirty_target_overlap.snap
---
source: tests/integration_tests/push.rs
assertion_line: 13
info:
  program: wt
  args:
    - beta
    - push
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpLjwqDc/test-config.toml
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mCannot push: conflicting uncommitted changes in:[0m

[40m [0m  conflict.txt

💡 [2mCommit or stash these changes in [REPO] first[0m
